PartTwo/config/AppOne/app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  labels:
    app: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: hello-kubernetes
        image: murachid/hello-world-web:v1
        ports:
        - containerPort: 8080
